@@ -1,3 +1,8 @@
+2006-10-05  Andrew Pinski  <pinskia@physics.uc.edu>
+
+	PR c++/28349
+	* testsuite/g++.dg/warn/var-args1.C: New test.
+
 2006-10-06  Joseph Myers  <joseph@codesourcery.com>
 
 	* lib/target-supports.exp
