@@ -1,3 +1,9 @@
+2006-10-05  Andrew Pinski  <pinskia@physics.uc.edu>
+
+	PR C++/28349
+	* call.c (build_x_va_arg): Remove the reference type
+	from the type before creating the pointer type.
+
 2006-10-03  Mark Mitchell  <mark@codesourcery.com>
 
 	PR c++/29138
